# MrsWatson

./: .gitmodules  CMakeLists.txt
main/: CMakeLists.txt
projects/VisualStudio/: MrsWatson.sln  MrsWatson.vcxproj  MrsWatsonTest.vcxproj  config.h  libMrsWatson.vcxproj  libaudiofile.vcxproj  libaudiofile.vcxproj.filters
source/: CMakeLists.txt  MrsWatson.c  MrsWatsonOptions.c  MrsWatsonOptions.h
source/audio/: AudioSettings.c  AudioSettings.h  SampleBuffer.c  SampleBuffer.h
source/io/: SampleSource.c  SampleSource.h  SampleSourceAiff.c  SampleSourceAudiofile.c  SampleSourceAudiofile.h  SampleSourcePcm.c  SampleSourcePcm.h  SampleSourceWave.c  SampleSourceWave.h
source/plugin/: Plugin.c  Plugin.h  PluginGain.c  PluginLimiter.c  PluginLimiter.h  PluginPassthru.c  PluginSilence.c  PluginVst2x.cpp  PluginVst2xLinux.cpp  PluginVst2xMac.cpp  PluginVst2xMac.mm
test/: CMakeLists.txt  MrsWatsonTestMain.c
test/app/: ProgramOptionTest.c
test/audio/: AudioSettingsTest.c
test/unit/: ApplicationRunner.c  ApplicationTestSuite.c
